--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 body {
-    background-color: #fcdef5;
+    background-color:#fcdef5;
 }
 
-a {
-    text-decoration: none
+a{ 
+    text-decoration:none;
 }
-
