--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ body{
     overflow:hidden;
 }
 
+ul{
+    margin:0;
+    padding:0;
+}
+
 /* Header **/
 header{
     background:#fcccf1;
@@ -28,7 +33,38 @@ header a{
     font-size:16px;
 }
 
-header ul{
+
+header li{
+    float:left;
+    display:inline;
+    padding: 0 20px 0 20px;
+}
+
+header #branding{
+    float:left;
+}
+
+header #branding h1{
     margin:0;
-    padding:0;
+}
+
+header nav{
+    float:right;
+    margin-top:50px;
+}
+
+header .highlight, header, current a{
+    color:#ffffff;
+    font-weight:bold;
+}
+
+header a:hover{
+    color:#ffffff;
+    font-weight:bold;
+}
+
+/* Showcase */
+#showcase{
+    min-height:500px;
+    background:url('../images/showcase.jpg') no-repeat;
 }
