new showcase and website theme

--- a/css/style.css
+++ b/css/style.css
@@ -66,5 +66,5 @@ header a:hover{
 /*Showcase*/
 #showcase{
     min-height:400px;
-    background:url('../images/showcase3.jpg') no-repeat;
+    background:url('../images/showcase.jpg') no-repeat;
 }
