--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,23 @@ ul{
     padding:0;
 }
 
+.button_1{
+    height:38px;
+    background:#fcccf1;
+    border:0;
+    padding-left:20px;
+    padding-right:20px;
+    color:#dd94cd;
+}
+
+.dark{
+    padding:15px;
+    background:#35424a;
+    color:#ffffff;
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
 /* Header **/
 header{
     background:#fcccf1;
@@ -66,5 +83,76 @@ header a:hover{
 /*Showcase*/
 #showcase{
     min-height:400px;
-    background:url('../images/showcase.jpg') no-repeat;
+    background:url('../images/showcase.jpg') no-repeat 0 -400px;
+    text-align:center;
+    color:#000000;
+}
+
+#showcase h1{
+    margin-top:100px;
+    font-size:55px;
+    margin-bottom:10px;
+}
+
+#showcase p{
+    font-size:20px;
+}
+
+/*Newsletter*/
+#newsletter{
+    padding:15px;
+    color:#ffffff;
+    background:#dd94cd;
+}
+
+#newsletter h1{
+    float:left;
+}
+
+#newsletter form{
+    float:right; 
+    margin-top:15px;
+}
+
+#newsletter input[type="email"]{
+    padding:4px;
+    height:25px;
+    width:250px;
+}
+
+/*Boxes*/
+#boxes{
+    margin-top:20px;
+}
+
+#boxes .box{
+    float: left;
+    width:30%;
+    padding:10px;
+    text-align:center;
+}
+
+#boxes .box img{
+    width:90px;
+}
+
+/*Sidebar*/
+aside#sidebar{
+    float:right;
+    width:30%;
+    margin-top:10px;
+}
+
+/*Main-col*/
+article#main-col{
+    float:left;
+    width:65%;
+}
+
+footer{
+    padding:20px;
+    margin-top:20px;
+    color:#000000;
+    background-color:#fcccf1;
+    text-align:center;
 }
