--- a/css/style.css
+++ b/css/style.css
@@ -143,16 +143,65 @@ aside#sidebar{
     margin-top:10px;
 }
 
+aside#sidebar .quote input, aside#sidebar .quote textarea{
+    width:90%;
+    padding:5px;
+}
+
 /*Main-col*/
 article#main-col{
     float:left;
     width:65%;
 }
 
+/*Blog*/
+ul#blog li{
+    list-style:none;
+    padding:20px;
+    border:#cccccc solid 1px;
+    margin-bottom:5px;
+    background:#e6e6e6;
+    
+}
 footer{
     padding:20px;
     margin-top:20px;
     color:#000000;
     background-color:#fcccf1;
     text-align:center;
+}
+
+
+/*Media Queries*/
+@media(max-width: 768px){
+   header #branding,
+   header nav,
+   header nav li,
+   #newsletter h1,
+   #newsletter form,
+   #boxes .box,
+   article#main-col,
+   aside#sidebar{
+       float:none;
+       text-align:center;
+       width:100%;
+   }
+   
+   header{
+       padding-bottom:20px;
+   }
+   
+   #showcase h1{
+       margin-top:40px;
+   }
+   
+   #newsletter button, .quote button{
+       display:block;
+       width:100%;
+   }
+   
+   #newsletter form input[type="email"], .quote input, .quote textarea{
+       width:100%;
+       margin-bottom:5px;
+   }
 }
