--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@ ul{
 
 .dark{
     padding:15px;
-    background:#35424a;
-    color:#ffffff;
+    background:#fcb8f0;
+    color:#000000;
     margin-top:10px;
     margin-bottom:10px;
 }
@@ -158,9 +158,9 @@ article#main-col{
 ul#blog li{
     list-style:none;
     padding:20px;
-    border:#cccccc solid 1px;
+    border:#000000 solid 1px;
     margin-bottom:5px;
-    background:#e6e6e6;
+    background:#ffffff;
     
 }
 footer{
@@ -173,19 +173,38 @@ footer{
 
 
 /*Media Queries*/
-@media(max-width: 768px){
-   header #branding,
-   header nav,
-   header nav li,
-   #newsletter h1,
-   #newsletter form,
-   #boxes .box,
-   article#main-col,
-   aside#sidebar{
-       float:none;
-       text-align:center;
-       width:100%;
-   }
+@media(max-width:768px){
+    header #branding,
+    header nav,
+    header nav li,
+    #newsletter h1,
+    #newsletter form,
+    #boxes .box,
+    article#main-col,
+    aside#sidebar{
+        float:none;
+        text-align:center;
+        width:100%;
+    }
+    
+    header{
+        padding-bottom:20px;
+    }
+    
+    #showcase h1{
+        margin-top:40px;
+    }
+    
+    #newsletter button{
+        display:block;
+        width:100%;
+    }
+    
+    #newsletter form input[type="email"]{
+        width:100%;
+        margin-bottom:5px;
+    }
+}
    
    header{
        padding-bottom:20px;
